# UM_ENGINF1

1º Semestre/Laboratórios de Informática 1/Worms/: creditos.md  worms.cabal
1º Semestre/Laboratórios de Informática 1/Worms/app/: Desenhar.hs  Eventos.hs  Main.hs  Mapas.hs  Tempo.hs  Worms.hs
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/: doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index.html  doc-index.json  index.html
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/base/src/: System.Info.html
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/binary/src/: Data.Binary.Class.html  Data.Binary.Generic.html  Data.Binary.Get.Internal.html  Data.Binary.Get.html  Data.Binary.Put.html  Data.Binary.html
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/bytestring/src/: Data.ByteString.Builder.ASCII.html  Data.ByteString.Builder.Extra.html  Data.ByteString.Builder.Internal.html  Data.ByteString.Builder.Prim.ASCII.html  Data.ByteString.Builder.Prim.Internal.Base16.html  Data.ByteString.Builder.Prim.Internal.Floating.html  Data.ByteString.Builder.Prim.Internal.html  Data.ByteString.Builder.Prim.html  Data.ByteString.Builder.RealFloat.D2S.html  Data.ByteString.Builder.RealFloat.F2S.html  Data.ByteString.Builder.RealFloat.Internal.html  Data.ByteString.Builder.RealFloat.TableGenerator.html  Data.ByteString.Builder.RealFloat.html  Data.ByteString.Builder.html  Data.ByteString.Char8.html  Data.ByteString.Internal.Type.html  Data.ByteString.Lazy.Char8.html  Data.ByteString.Lazy.Internal.Deque.html  Data.ByteString.Lazy.Internal.html  Data.ByteString.Lazy.html  Data.ByteString.Short.Internal.html  Data.ByteString.Unsafe.html  Data.ByteString.html
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/directory/: directory.haddock
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/directory/src/: System.Directory.Internal.C_utimensat.html  System.Directory.Internal.Common.html  System.Directory.Internal.Posix.html  System.Directory.OsPath.html  System.Directory.html
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/filepath/src/: System.OsPath.Data.ByteString.Short.Hidden.html  System.OsPath.Data.ByteString.Short.Internal.Hidden.html  System.OsPath.Internal.html  (+6 more)
1º Semestre/Laboratórios de Informática 1/Worms/haddocks/unix/: unix.haddock
1º Semestre/Laboratórios de Informática 1/Worms/lib/: Labs2025.hs  Tarefa0_2025.hs  Tarefa0_geral.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs  Tarefa4.hs
1º Semestre/Laboratórios de Informática 1/Worms/test/: Tarefa1Test.hs  Tarefa2Test.hs  Tarefa3Test.hs  Tarefa4Test.hs
(+221 files in other folders)
